@@ -12,7 +12,6 @@ LIBWFUT_REVISION=0
 LIBWFUT_AGE=0
 
 AC_PROG_CXX
-AC_DISABLE_FAST_INSTALL
 AC_PROG_LIBTOOL
 
 CXXFLAGS="$CXXFLAGS -Wall -DTIXML_USE_STL=1"
